--- a/english.html
+++ b/english.html
@@ -13,33 +13,15 @@
 </head>
 <body>
     <header><h1>English</h1></header>
-    <main><h2>Exploring the Life and Work of Ila Sachani</h2><p>Ila Sachani is an inspiring figure... You look at the embroidered pieces in the cubby-hole, you see the riot of colour, and you know this cannot be the work of a burdened soul. Each is better than the other - cushion covers, bedspreads, pillowcases, wall drapes and dress material with intricate designs and bright hues.
-And then you see squatting in their midst the "designer". You see her with a big smile on her lips and you wonder how a woman with hands that hang uselessly by her sides is able to see only the brighter.
-But there she is, her whole being concentrated on that shiny needle tracing a line of sinuous beauty across the cloth. The traditional art of Kathiavad embroidery is a demanding style, yet Ila Sachani is as much at ease at what she is doing as she is with herself.
+    <main><h2>Exploring the Life and Work of Ila Sachani</h2><p>Ila Sachani is an inspiring figure... 
+        
+Ila Sachani’s journey is one of resilience and inspiration. Born as a farmer's daughter in a humble household, Ila faced numerous challenges early in life. Despite the odds, she displayed an unwavering determination to excel in her chosen path.
 
-As long as she can remember Sachani has been doing things this way. Diagnosed with an irreversible congenital deformity in her upper limbs, this 26-year-old daughter of a farmer in Surat district of Gujarat learnt to cope with the disadvantage from an early age. Her hands are mere appendages on her body, but she seldom feels handicapped on their account.
+Her hard work and dedication eventually led her to become a celebrated artist, recognized for her unique talent and creative expression. Ila’s achievements were crowned with the prestigious President's Medal, an honor that cemented her place as a role model for many aspiring individuals.
 
-As a little girl though, Sachani had to battle it out to be on an equal footing with others. When other small hands drew figures in the sand or teasingly pulled dog tails or plucked wild flowers, Sachani would sit and wonder why she couldn't do all these.
-The girl from Motivavdi village in Bhavnagar wanted to hold a chalk in her hands and draw figures on the slate. But she was refused admission in more than one institution, until a municipal school took her in. She managed to reach Class XII but didn't get through since she could not write her board examinations and had to give up her education at that juncture.
+However, beyond the accolades and recognition, the most profound change in Ila’s life was her newfound independence. Through her skills and accomplishments, she gained a sense of self-reliance and confidence, transforming not just her life but also inspiring others to pursue their dreams against all odds.
 
- 
-Hands off: The inability to use her hands has not stunted Sachani's creativity
-Life, however, had taught Sachani enough by now. Having explored and despaired of all medical options and run from pillar to post to get her a school admission, Sachani's parents were determined that their daughter-the eldest of three children-would be equipped to lead a fulfilling life.
-At a young age, she was taught how to go about her daily grind with the help of her legs. Things that people normally did with their hands, Sachani learnt to do with her lower limbs. She was soon adept at using her feet for eating, combing her hair, dusting, folding clothes, even chopping vegetables.
-
-The community's rich embroidery tradition also came in handy. Being seasoned craftspersons, Sachani's mother and grandmother ensured that their little girl learnt to use her legs to paint and sew. The most intricate - and at times discouraging - lesson was on threading a needle.
-ADVERTISEMENT
-It took much perseverance on their part but Sachani's own enthusiasm and determination to succeed made matters easier. Her brother and sister were always there, providing Sachani the much-needed moral support that she needed.
-The efforts paid off and by the time she was 10, Sachani was an expert in her own right. She had not only mastered the highly intricate Kathiavad embroidery typical of the Saurashtra region but also styles from outside Gujarat like Kachha, Lucknowi and Kashmiri.
-
-For years, Sachani kept at her needlework for the fun of it. Like her mother and grandmother, she made exquisite designs for neighbours, friends and relatives and was content with the goodwill she earned from it.
-Then two years ago, one of them, fascinated by her dedication and diversity of work, referred her to B.T. Dabhi, the development officer of Surat, who in turn launched her creations at a state-level handicraft fair.
-
-That in a sense was the real breakthrough. It proved that Sachani could actually earn her own living. The encouraging response of dignitaries and others who visited the fair came as an unexpected boost and Sachani began to go places.
-ADVERTISEMENT
-She became a regular at the handicraft fairs held at state and national levels and also travelled abroad to display her work, which included both embroidered art and paintings. With bulk and customised orders coming in, her income too grew steadily. Today, she earns around Rs 4,000 a month, an amount which she says is more than sufficient to take care of her needs.
-
-It's a success that has been diligently and dexterously designed. And in recognition many awards, including the President's Medal in December last year, have come Sachani's way. But at the end of the day, it's her ability to pursue a passion that Sachani finds more rewarding. It is a passion that helps her colour her life with the most uplifting hues.
+Ila Sachani’s story is a reminder that talent, perseverance, and courage can overcome even the toughest of circumstances. And in recognition many awards, including the President's Medal in December last year, have come Sachani's way. But at the end of the day, it's her ability to pursue a passion that Sachani finds more rewarding. It is a passion that helps her colour her life with the most uplifting hues.
 
  </p></main>
     <footer>&copy; 2025 Atharv's Website. All rights reserved.</footer>
