--- a/english.html
+++ b/english.html
@@ -23,7 +23,7 @@ However, beyond the accolades and recognition, the most profound change in Ilaâ€
 
 Ila Sachaniâ€™s story is a reminder that talent, perseverance, and courage can overcome even the toughest of circumstances. And in recognition many awards, including the President's Medal in December last year, have come Sachani's way. But at the end of the day, it's her ability to pursue a passion that Sachani finds more rewarding. It is a passion that helps her colour her life with the most uplifting hues.
 
- </p></main>
+....... </p></main>
     <footer>&copy; 2025 Atharv's Website. All rights reserved.</footer>
 </body>
 </html>
