--- a/marathi.html
+++ b/marathi.html
@@ -1,19 +1,132 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="mr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marathi</title>
+    <title>जल प्रदूषण</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: #f0f8ff; color: #333; padding: 20px; }
-        header { background-color: #1e90ff; color: white; padding: 20px; text-align: center; }
-        footer { background-color: #1e90ff; color: white; padding: 10px; position: fixed; bottom: 0; width: 100%; }
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        h1, h2 {
+            text-align: center;
+            color: #2c3e50;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        h1 {
+            font-size: 2.5em;
+            text-transform: uppercase;
+            margin-top: 20px;
+        }
+        h2 {
+            font-size: 1.8em;
+            margin-top: 30px;
+            text-decoration: underline;
+        }
+        p {
+            font-size: 1.2em;
+            line-height: 1.6;
+            margin: 20px auto;
+            width: 80%;
+            text-align: justify;
+            color: #555;
+        }
+        ul {
+            margin-top: 20px;
+            padding-left: 30px;
+            width: 80%;
+            margin: 0 auto;
+        }
+        li {
+            font-size: 1.1em;
+            margin-bottom: 15px;
+            color: #444;
+        }
+        li strong {
+            color: #2c3e50;
+        }
+        .container {
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin: 30px auto;
+            padding: 20px;
+            width: 85%;
+            max-width: 1000px;
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+        .footer {
+            text-align: center;
+            font-size: 1.1em;
+            color: #7f8c8d;
+            margin-top: 50px;
+            padding: 20px 0;
+        }
+        .footer a {
+            text-decoration: none;
+            color: #3498db;
+        }
+        .footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
-    <header><h1>Marathi</h1></header>
-    <main><h2>Information about Water Pollution</h2><p>Impact of water pollution on society...</p></main>
-    <footer>&copy; 2025 Atharv's Website. All rights reserved.</footer>
+    <div class="container">
+        <h1>जल प्रदूषण</h1>
+        <div class="section">
+            <p>जल प्रदूषण हा एक गंभीर पर्यावरणीय प्रश्न आहे ज्याचा परिणाम मानव जीवन, वन्यजीव, आणि सर्वसाधारणपणे पर्यावरणावर होतो. जल प्रदूषणाचा मुख्य कारणे म्हणजे, औद्योगिक कचरा, रासायनिक पदार्थ, घरगुती कचऱ्याचे जलस्रोतांमध्ये मिश्रण, आणि जलस्रोतांचा अत्यधिक उपयोग. यामुळे जलाच्या गुणवत्तेवर नकारात्मक परिणाम होतो आणि ते आरोग्यासाठी धोकादायक ठरते.</p>
+        </div>
+ 
+        <div class="section">
+            <h2>जल प्रदूषणाचे कारणे:</h2>
+            <ul>
+                <li><strong>औद्योगिक कचरा:</strong> अनेक उद्योगांमधून उत्सर्जित होणारे रासायनिक आणि विषारी पदार्थ जलस्रोतांमध्ये मिसळले जातात. यामुळे जलाचे प्रदूषण होते.</li>
+                <li><strong>घरेलू अपशिष्ट:</strong> घरांच्या स्वच्छतेसाठी वापरणारे रासायनिक पदार्थ आणि अपशिष्ट जलस्रोतांमध्ये निघतात. हे जल प्रदूषणाचे एक प्रमुख कारण आहे.</li>
+                <li><strong>कृषी रसायने:</strong> शेतीत वापरले जाणारे कीटकनाशक, औषधे, आणि रासायनिक खतं जल स्रोतांमध्ये मिसळतात, ज्यामुळे जल प्रदूषण होतो.</li>
+                <li><strong>प्लास्टिक कचरा:</strong> प्लास्टिकच्या वस्तू जलस्रोतांमध्ये अडकतात आणि निसर्गात विघटित होण्यास खूप वेळ लागतो, ज्यामुळे प्रदूषण वाढते.</li>
+            </ul>
+        </div>
+ 
+        <div class="section">
+            <h2>जल प्रदूषणाचे परिणाम:</h2>
+            <ul>
+                <li><strong>आरोग्यावर परिणाम:</strong> प्रदूषित जल सेवन केल्याने विविध आरोग्य समस्या होतात. उदाहरणार्थ, दस्त, हैजा, मलेरिया, टायफाइड, आणि कोलरा सारख्या रोगांचा प्रसार होतो.</li>
+                <li><strong>वन्यजीवांवर परिणाम:</strong> जल प्रदूषणामुळे जलातील जीव-जंतु, मासे, कासव, आणि जलचर यांचे जीवन संकटात येते. यामुळे जैवविविधतेवर खूप परिणाम होतो.</li>
+                <li><strong>पेयजलाचा पुरवठा:</strong> प्रदूषित जलामुळे स्वच्छ पाणी उपलब्ध होणे कठीण होईल, ज्यामुळे लोकांमध्ये पाणीटंचाई निर्माण होऊ शकते.</li>
+                <li><strong>कृषी उत्पादनावर परिणाम:</strong> प्रदूषित पाणी शेतीसाठी वापरले तर त्याचे दुष्परिणाम होतात. पिके मरू शकतात किंवा त्यांचा पोषणतत्त्वांचा दर्जा कमी होऊ शकतो.</li>
+                <li><strong>पर्यावरणीय नासधूस:</strong> जल प्रदूषणामुळे एकूणच पर्यावरणावर नकारात्मक प्रभाव पडतो. जलचक्र बिघडतो आणि हे पर्यावरणाच्या संतुलनाला बाधा आणते.</li>
+            </ul>
+        </div>
+ 
+        <div class="section">
+            <h2>जल प्रदूषण टाळण्यासाठी उपाय:</h2>
+            <ul>
+                <li><strong>औद्योगिक कचर्याचे योग्य निस्तारण:</strong> औद्योगिक कचरा आणि रासायनिक पदार्थ जलस्रोतांमध्ये सोडू नये. यासाठी कचरा निस्तारणाचे चांगले व्यवस्थापन गरजेचे आहे.</li>
+                <li><strong>जल पुनर्चक्रण:</strong> जल पुनर्नवीनीकरण आणि पुनर्चक्रण तंत्रांचा वापर वाढवणे आवश्यक आहे. हे आपल्याला पाणी वाचवण्यासाठी मदत करेल.</li>
+                <li><strong>साफसफाई राखणे:</strong> जलस्रोतांमध्ये कचरा टाकणे टाळा. नद्या, तलाव, आणि नाले स्वच्छ ठेवण्याचे महत्त्व.</li>
+                <li><strong>वृक्षारोपण:</strong> वृक्षारोपणामुळे जलाच्या नैसर्गिक स्रोतांचे संरक्षण होऊ शकते. वृक्ष जलवायूला सुधारण्यासाठी मदत करतात.</li>
+                <li><strong>शेतीत पर्यावरणपूरक पद्धती:</strong> रासायनिक खतांऐवजी जैविक खतांचा वापर वाढवावा. तसेच, जलवापराची प्रभावी नियोजन करणे आवश्यक आहे.</li>
+                <li><strong>सार्वजनिक शिक्षण आणि जागरूकता:</strong> लोकांना जल प्रदूषणाविषयी जागरूक करणे आणि त्यावर उपाय कसे करावेत याची माहिती देणे गरजेचे आहे.</li>
+            </ul>
+        </div>
+ 
+        <div class="section">
+            <h2>निष्कर्ष:</h2>
+            <p>जल प्रदूषणाच्या समस्या सुलझविण्यासाठी प्रत्येकाला आपली जबाबदारी ओळखणे आवश्यक आहे. जेवढा जल प्रदूषण नियंत्रणात आणता येईल, तेवढा तो पर्यावरणासाठी आणि मानवी आरोग्यासाठी फायदेशीर ठरेल. सर्वांगीण प्रयत्न आणि योग्य धोरणांचा अवलंब केला तर जल प्रदूषणावर नियंत्रण ठेवणे शक्य आहे.</p>
+        </div>
+ 
+        <div class="footer">
+            <p>स्रोत: पर्यावरण संरक्षण विभाग</p>
+        </div>
+    </div>
 </body>
 </html>
