--- a/hindi.html
+++ b/hindi.html
@@ -1,19 +1,76 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hindi</title>
+    <title>हिन्द महासागर में छोटा-सा हिन्दुस्तान</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: #f0f8ff; color: #333; padding: 20px; }
-        header { background-color: #1e90ff; color: white; padding: 20px; text-align: center; }
-        footer { background-color: #1e90ff; color: white; padding: 10px; position: fixed; bottom: 0; width: 100%; }
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #74ebd5 0%, #9face6 100%);
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            color: #333;
+        }
+        .container {
+            background-color: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+            width: 80%;
+            max-width: 800px;
+            padding: 40px;
+            line-height: 1.8;
+        }
+        h1 {
+            text-align: center;
+            font-size: 32px;
+            color: #2c3e50;
+            margin-bottom: 20px;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
+        }
+        p {
+            font-size: 18px;
+            text-align: justify;
+            margin-bottom: 20px;
+        }
+        .quote {
+            font-style: italic;
+            color: #16a085;
+            font-size: 20px;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 40px;
+            color: #7f8c8d;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
-    <header><h1>Hindi</h1></header>
-    <main><h2>India as a Country in the Indian Ocean</h2><p>India's geographical importance...</p></main>
-    <footer>&copy; 2025 Atharv's Website. All rights reserved.</footer>
+ 
+    <div class="container">
+        <h1>हिन्द महासागर में छोटा-सा हिन्दुस्तान</h1>
+        <p>बहुत समय पहले, हिन्द महासागर के बीचों-बीच एक विशाल देश था, जिसका नाम भारत था। यह देश समुद्र के किनारे बसा हुआ था, और इसका तटीय क्षेत्र समुद्र के साथ गहरे संबंधों में बसा था। भारत का समुद्र तट अरब सागर, बंगाल की खाड़ी और हिन्द महासागर से घिरा हुआ था। यहाँ के लोग समुद्र को केवल जल का स्रोत नहीं मानते थे, बल्कि यह उनके जीवन का अभिन्न हिस्सा था।</p>
+ 
+        <p>भारत का समुद्र तट व्यापार और संस्कृति का महत्वपूर्ण केंद्र बन चुका था। प्राचीन समय में व्यापारी समुद्र के रास्ते मसाले, रेशम, और अन्य वस्तुएं लेकर आते थे और उन्हें दुनिया के कोने-कोने में पहुँचाते थे। यह समुद्री मार्ग भारत और अफ्रीका, मध्य-पूर्व, और दक्षिण-पूर्व एशिया के बीच एक मजबूत संबंध बनाता था।</p>
+ 
+        <p>एक दिन, एक छोटे से गाँव के बच्चे ने समुद्र की लहरों को देखकर अपने दादा से पूछा, <span class="quote">"दादा, यह महासागर इतना विशाल क्यों है, और हमारा भारत इस महासागर से कैसे जुड़ा है?"</span> दादा मुस्कराए और बोले, <span class="quote">"बिलकुल, यह महासागर बहुत विशाल है, लेकिन हमारे भारत का समुद्र के साथ एक गहरा और पुराना रिश्ता है। समुद्र ने हमारे व्यापारियों को दूर-दूर तक भेजा, हमारे धर्मों को फैलने का रास्ता दिखाया, और यहाँ तक कि हमारे जलवायु और पर्यावरण को भी प्रभावित किया।"</span></p>
+ 
+        <p>दादा ने बताया कि कैसे प्राचीन राजाओं ने समुद्र के रास्ते दुनिया से संपर्क किया, और भारत ने न केवल व्यापार किया, बल्कि संस्कृति, ज्ञान, और धर्म का भी आदान-प्रदान किया। <span class="quote">"समुद्र ने हमारी सभ्यता को पोषित किया,"</span> दादा ने कहा, <span class="quote">"यह वही महासागर है जो हमारे व्यापारियों को दुनिया के विभिन्न हिस्सों में भेजता है, और हमारी संस्कृति को दूर-दूर तक फैलाता है।"</span></p>
+ 
+        <p>बच्चे ने आंखों में चमक के साथ कहा, <span class="quote">"तो, यह समुद्र केवल जल नहीं, बल्कि हमारी पूरी संस्कृति का हिस्सा है!"</span> दादा ने उसे गले लगाते हुए कहा, <span class="quote">"हां, यह समुद्र हमारी पहचान है, और हम हमेशा इसके साथ जुड़े रहेंगे।"</span></p>
+ 
+        <p>समुद्र की लहरों के साथ एक नया दिन उग आया, और भारत के लोग जानते थे कि हिन्द महासागर के साथ उनका यह रिश्ता अनमोल और अमिट रहेगा।</p>
+ 
+        <div class="footer">
+            <p>कहानी का लेखक: आपकी कल्पना</p>
+        </div>
+    </div>
+ 
 </body>
 </html>
