--- a/math.html
+++ b/math.html
@@ -1,19 +1,145 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math</title>
+    <title>Madhubani Painting</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: #f0f8ff; color: #333; padding: 20px; }
-        header { background-color: #1e90ff; color: white; padding: 20px; text-align: center; }
-        footer { background-color: #1e90ff; color: white; padding: 10px; position: fixed; bottom: 0; width: 100%; }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f1f1f1;
+        }
+        header {
+            background-color: #5e2a84;
+            color: white;
+            text-align: center;
+            padding: 40px 20px;
+            font-size: 36px;
+            font-weight: bold;
+        }
+        h1, h2 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #333;
+        }
+        section {
+            padding: 40px;
+        }
+        .content {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            margin: 20px auto;
+            max-width: 1100px;
+        }
+        .content h2 {
+            margin-top: 0;
+            font-size: 28px;
+            color: #5e2a84;
+        }
+        .content p {
+            font-size: 18px;
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+        ul {
+            list-style-type: none;
+            padding-left: 20px;
+        }
+        ul li {
+background: url('https://img.icons8.com/ios-filled/50/000000/square-full.png') no-repeat left center;
+            padding-left: 30px;
+            font-size: 18px;
+            margin-bottom: 12px;
+        }
+        footer {
+            background-color: #5e2a84;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        .btn {
+            display: inline-block;
+            background-color: #5e2a84;
+            color: white;
+            padding: 12px 30px;
+            border-radius: 30px;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 16px;
+            transition: background-color 0.3s;
+            margin-top: 20px;
+        }
+        .btn:hover {
+            background-color: #4b1d65;
+        }
+        .image-section {
+            text-align: center;
+            margin: 40px 0;
+        }
+        .image-section img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
 <body>
-    <header><h1>Math</h1></header>
-    <main><h2>Indian Mathematicians</h2><p>Research on Aryabhata, Brahmagupta, and Srinivasa Ramanujan...</p></main>
-    <footer>&copy; 2025 Atharv's Website. All rights reserved.</footer>
+ 
+<header>
+    Madhubani Painting
+</header>
+ 
+<section class="content">
+    <h2>1. History and Origin</h2>
+    <p>Madhubani painting, also known as Mithila painting, is a traditional Indian art form from the Mithila region, which includes parts of Bihar, Jharkhand, and Nepal. It is believed to have been practiced for over 2,500 years. The art is thought to have originated during the time of the Ramayana, and is closely associated with Hindu mythology. King Janaka, father of Sita, is believed to have commissioned these paintings for Sita's wedding.</p>
+ 
+    <h2>2. Characteristics of Madhubani Art</h2>
+    <ul>
+        <li><strong>Themes:</strong> Common themes include nature (trees, flowers, animals, birds), mythological and religious subjects (gods and goddesses), and social themes (weddings, daily life, fertility symbols).</li>
+        <li><strong>Distinctive Features:</strong> Madhubani art is known for intricate line work, vibrant colors, and geometric patterns. The paintings often feature bold lines and bright colors like red, black, and yellow, with details in green, blue, and other shades.</li>
+    </ul>
+ 
+    <h2>3. Techniques and Tools</h2>
+    <p>Traditional Madhubani artists use tools like twigs, fingers, and brushes to create the detailed patterns. The art is usually painted on surfaces such as walls, cloth, paper, and canvas. Artists make their own brushes for finer details and use natural pigments for colors.</p>
+ 
+    <h2>4. Types of Madhubani Painting</h2>
+    <ul>
+        <li><strong>Bharni:</strong> Heavy use of colors with minimal line work, often depicting gods and goddesses.</li>
+        <li><strong>Kachni:</strong> Focuses on intricate line work with minimal color, creating delicate designs.</li>
+        <li><strong>Tantrik:</strong> Depicts mystical and spiritual themes, often with bright, bold colors.</li>
+        <li><strong>Godna:</strong> Features tattoo-like patterns and often depicts human figures and animals.</li>
+    </ul>
+ 
+    <h2>5. Modern Evolution</h2>
+    <p>Madhubani paintings gained recognition in the 20th century, expanding beyond traditional wall decorations to be created on paper, cloth, and canvas. This increased the art's accessibility globally, and it is now seen as an important cultural tradition. Artists also began using the art form on textiles like sarees and accessories.</p>
+ 
+    <h2>6. Notable Artists</h2>
+    <ul>
+        <li><strong>Jagdamba Devi:</strong> One of the first women to gain recognition for her Madhubani art.</li>
+        <li><strong>Bharti Dayal:</strong> Known for her intricate and vivid depictions of nature and mythology.</li>
+        <li><strong>Sita Devi:</strong> Famous for her vibrant use of color and depiction of Hindu deities.</li>
+    </ul>
+ 
+    <h2>7. Recognition and Awards</h2>
+    <p>In 2003, Madhubani painting was granted a Geographical Indication (GI) tag, which ensures the authenticity of the artwork. Many artists have received national and international awards for their contributions to this folk art tradition.</p>
+ 
+    <h2>8. Cultural Significance</h2>
+    <p>Madhubani paintings are deeply intertwined with the cultural and religious traditions of the Mithila region. They were traditionally used to decorate homes during weddings and festivals to bring good luck and prosperity. The art form serves as a way for rural women to express their emotions, dreams, and daily life through visual storytelling.</p>
+ 
+    <div class="image-section">
+https://en.wikipedia.org/wiki/Madhubani_painting" class="btn" target="_blank">Learn More</a>
+</section>
+ 
+<footer>
+    <p>&copy; 2025 Madhubani Painting Art | All Rights Reserved</p>
+</footer>
+ 
 </body>
 </html>
