--- a/english.html
+++ b/english.html
@@ -1,29 +1,109 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English</title>
+    <title>Exploring the Life and Work of Ila Sachani</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: #f0f8ff; color: #333; padding: 20px; }
-        header { background-color: #1e90ff; color: white; padding: 20px; text-align: center; }
-        footer { background-color: #1e90ff; color: white; padding: 10px; position: fixed; bottom: 0; width: 100%; }
+        body {
+            font-family: 'Georgia', serif;
+            background: linear-gradient(to bottom, #f0f8ff, #e6f7ff);
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+        header {
+            background-color: #004d99;
+            color: white;
+            padding: 20px 10px;
+            text-align: center;
+            font-size: 2em;
+            font-weight: bold;
+        }
+        nav {
+            text-align: center;
+            padding: 10px 0;
+            background: #0066cc;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: white;
+            font-size: 1.1em;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        main {
+            margin: 20px;
+            padding: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+        h1, h2 {
+            color: #004d99;
+        }
+        p {
+            text-align: justify;
+            line-height: 1.8;
+        }
+        h2 {
+            margin-top: 30px;
+            text-decoration: underline;
+        }
+        footer {
+            background: #004d99;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+            margin-top: 20px;
+        }
+        footer a {
+            color: #ffcc00;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+        .image-container {
+            text-align: center;
+            margin: 20px 0;
+        }
+        .image-container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            border: 2px solid #004d99;
+        }
     </style>
 </head>
 <body>
-    <header><h1>English</h1></header>
-    <main><h2>Exploring the Life and Work of Ila Sachani</h2><p>Ila Sachani is an inspiring figure... 
-        
-Ila Sachani’s journey is one of resilience and inspiration. Born as a farmer's daughter in a humble household, Ila faced numerous challenges early in life. Despite the odds, she displayed an unwavering determination to excel in her chosen path.
-
-Her hard work and dedication eventually led her to become a celebrated artist, recognized for her unique talent and creative expression. Ila’s achievements were crowned with the prestigious President's Medal, an honor that cemented her place as a role model for many aspiring individuals.
-
-However, beyond the accolades and recognition, the most profound change in Ila’s life was her newfound independence. Through her skills and accomplishments, she gained a sense of self-reliance and confidence, transforming not just her life but also inspiring others to pursue their dreams against all odds.
-
-Ila Sachani’s story is a reminder that talent, perseverance, and courage can overcome even the toughest of circumstances. And in recognition many awards, including the President's Medal in December last year, have come Sachani's way. But at the end of the day, it's her ability to pursue a passion that Sachani finds more rewarding. It is a passion that helps her colour her life with the most uplifting hues.
-
-....... </p></main>
-    <footer>&copy; 2025 Atharv's Website. All rights reserved.</footer>
+    <header>Exploring the Life and Work of Ila Sachani</header>
+    <nav>
+        <a href="#introduction">Introduction</a>
+        <a href="#early-life">Early Life</a>
+        <a href="#achievements">Achievements</a>
+        <a href="#inspiration">Inspiration</a>
+    </nav>
+    <main>
+        <section id="introduction">
+            <h2>Introduction</h2>
+            <p>Ila Sachani, hailing from Moti Vavdi village in Bhavnagar, Gujarat, is a remarkable artisan celebrated for her exquisite embroidery, all crafted using her feet.</p>
+        </section>
+        <section id="early-life">
+            <h2>Early Life and Challenges</h2>
+            <p>Born with a congenital condition that left her arms unusable, Ila's journey is a testament to resilience and ingenuity. Under the guidance of her mother and grandmother, both adept in Kathiawar embroidery, Ila mastered the art of threading needles and creating intricate designs with her feet.</p>
+        </section>
+        <section id="achievements">
+            <h2>Artistic Achievements</h2>
+            <div class="image-container">
+https://www.learncbse.in/ila-sachani-embroidering-dreams-with-her-feet-class-6-summary/" target="_blank">Learn CBSE</a>,
+<a href="https://timesofindia.indiatimes.com/city/ahmedabad/gujarat-body-honours-empowered-women/articleshow/1738275.cms" target="_blank">Times of India</a>
+        </p>
+    </footer>
 </body>
 </html>
