--- a/math.html
+++ b/math.html
@@ -3,143 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madhubani Painting</title>
+    <title>Indian Mathematicians and Their Contributions</title>
     <style>
+        /* General Styles */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f1f1f1;
+            background-color: #f9f9fb;
+            color: #333;
+            line-height: 1.6;
         }
         header {
-            background-color: #5e2a84;
-            color: white;
+            background: linear-gradient(135deg, #1e90ff, #4682b4);
+            color: #fff;
+            padding: 1.5rem 1rem;
             text-align: center;
-            padding: 40px 20px;
-            font-size: 36px;
-            font-weight: bold;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-        h1, h2 {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: #333;
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
         }
         section {
-            padding: 40px;
+            max-width: 1000px;
+            margin: 2rem auto;
+            padding: 2rem;
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
         }
-        .content {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            margin: 20px auto;
-            max-width: 1100px;
-        }
-        .content h2 {
-            margin-top: 0;
-            font-size: 28px;
-            color: #5e2a84;
-        }
-        .content p {
-            font-size: 18px;
-            line-height: 1.6;
-            margin-bottom: 20px;
+        h2 {
+            color: #1e90ff;
+            font-size: 1.8rem;
+            margin-bottom: 1rem;
+            text-transform: uppercase;
         }
         ul {
-            list-style-type: none;
-            padding-left: 20px;
+            list-style-type: disc;
+            margin-left: 1.5rem;
         }
         ul li {
-background: url('https://img.icons8.com/ios-filled/50/000000/square-full.png') no-repeat left center;
-            padding-left: 30px;
-            font-size: 18px;
-            margin-bottom: 12px;
+            margin-bottom: 0.8rem;
         }
         footer {
-            background-color: #5e2a84;
-            color: white;
+            background: #1e90ff;
+            color: #fff;
             text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
+            padding: 1rem;
+            margin-top: 2rem;
+            box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
         }
-        .btn {
-            display: inline-block;
-            background-color: #5e2a84;
-            color: white;
-            padding: 12px 30px;
-            border-radius: 30px;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 16px;
-            transition: background-color 0.3s;
-            margin-top: 20px;
+        footer p {
+            margin: 0;
+            font-size: 1rem;
         }
-        .btn:hover {
-            background-color: #4b1d65;
+ 
+        /* Highlight Styles */
+        ul li strong {
+            color: #4682b4;
         }
-        .image-section {
-            text-align: center;
-            margin: 40px 0;
-        }
-        .image-section img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+ 
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2rem;
+            }
+            section {
+                padding: 1.5rem;
+            }
+            h2 {
+                font-size: 1.5rem;
+            }
         }
     </style>
 </head>
 <body>
- 
-<header>
-    Madhubani Painting
-</header>
- 
-<section class="content">
-    <h2>1. History and Origin</h2>
-    <p>Madhubani painting, also known as Mithila painting, is a traditional Indian art form from the Mithila region, which includes parts of Bihar, Jharkhand, and Nepal. It is believed to have been practiced for over 2,500 years. The art is thought to have originated during the time of the Ramayana, and is closely associated with Hindu mythology. King Janaka, father of Sita, is believed to have commissioned these paintings for Sita's wedding.</p>
- 
-    <h2>2. Characteristics of Madhubani Art</h2>
-    <ul>
-        <li><strong>Themes:</strong> Common themes include nature (trees, flowers, animals, birds), mythological and religious subjects (gods and goddesses), and social themes (weddings, daily life, fertility symbols).</li>
-        <li><strong>Distinctive Features:</strong> Madhubani art is known for intricate line work, vibrant colors, and geometric patterns. The paintings often feature bold lines and bright colors like red, black, and yellow, with details in green, blue, and other shades.</li>
-    </ul>
- 
-    <h2>3. Techniques and Tools</h2>
-    <p>Traditional Madhubani artists use tools like twigs, fingers, and brushes to create the detailed patterns. The art is usually painted on surfaces such as walls, cloth, paper, and canvas. Artists make their own brushes for finer details and use natural pigments for colors.</p>
- 
-    <h2>4. Types of Madhubani Painting</h2>
-    <ul>
-        <li><strong>Bharni:</strong> Heavy use of colors with minimal line work, often depicting gods and goddesses.</li>
-        <li><strong>Kachni:</strong> Focuses on intricate line work with minimal color, creating delicate designs.</li>
-        <li><strong>Tantrik:</strong> Depicts mystical and spiritual themes, often with bright, bold colors.</li>
-        <li><strong>Godna:</strong> Features tattoo-like patterns and often depicts human figures and animals.</li>
-    </ul>
- 
-    <h2>5. Modern Evolution</h2>
-    <p>Madhubani paintings gained recognition in the 20th century, expanding beyond traditional wall decorations to be created on paper, cloth, and canvas. This increased the art's accessibility globally, and it is now seen as an important cultural tradition. Artists also began using the art form on textiles like sarees and accessories.</p>
- 
-    <h2>6. Notable Artists</h2>
-    <ul>
-        <li><strong>Jagdamba Devi:</strong> One of the first women to gain recognition for her Madhubani art.</li>
-        <li><strong>Bharti Dayal:</strong> Known for her intricate and vivid depictions of nature and mythology.</li>
-        <li><strong>Sita Devi:</strong> Famous for her vibrant use of color and depiction of Hindu deities.</li>
-    </ul>
- 
-    <h2>7. Recognition and Awards</h2>
-    <p>In 2003, Madhubani painting was granted a Geographical Indication (GI) tag, which ensures the authenticity of the artwork. Many artists have received national and international awards for their contributions to this folk art tradition.</p>
- 
-    <h2>8. Cultural Significance</h2>
-    <p>Madhubani paintings are deeply intertwined with the cultural and religious traditions of the Mithila region. They were traditionally used to decorate homes during weddings and festivals to bring good luck and prosperity. The art form serves as a way for rural women to express their emotions, dreams, and daily life through visual storytelling.</p>
- 
-    <div class="image-section">
-https://en.wikipedia.org/wiki/Madhubani_painting" class="btn" target="_blank">Learn More</a>
-</section>
- 
-<footer>
-    <p>&copy; 2025 Madhubani Painting Art | All Rights Reserved</p>
-</footer>
- 
+    <header>
+        <h1>Indian Mathematicians and Their Contributions</h1>
+    </header>
+    <section>
+        <h2>Aryabhata (476 CE – 550 CE)</h2>
+        <ul>
+            <li><strong>Mathematics:</strong> Introduced zero as a place value, solved linear equations, and calculated areas and volumes.</li>
+            <li><strong>Trigonometry:</strong> Defined sine functions and created accurate sine tables.</li>
+            <li><strong>Astronomy:</strong> Explained Earth's rotation, calculated the solar year length, and predicted eclipses.</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Brahmagupta (598 CE – 668 CE)</h2>
+        <ul>
+            <li><strong>Zero:</strong> Treated zero as a number and defined its arithmetic operations.</li>
+            <li><strong>Algebra:</strong> Solved quadratic equations and introduced negative numbers.</li>
+            <li><strong>Geometry:</strong> Developed Brahmagupta’s formula for cyclic quadrilaterals and methods for approximating square roots.</li>
+            <li><strong>Astronomy:</strong> Studied planetary motion and calculated Earth’s circumference.</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Srinivasa Ramanujan (1887 CE – 1920 CE)</h2>
+        <ul>
+            <li><strong>Number Theory:</strong> Developed Ramanujan primes and the partition function.</li>
+            <li><strong>Infinite Series:</strong> Created series for Pi and approximations for logarithmic functions.</li>
+            <li><strong>Hardy-Ramanujan Number:</strong> Discovered 1729, the smallest number expressible as the sum of two cubes in two ways.</li>
+            <li><strong>Elliptic Functions:</strong> Made advances in modular forms and mathematical analysis.</li>
+        </ul>
+    </section>
+    <footer>
+        <p>&copy; 2025 Indian Mathematics Society</p>
+    </footer>
 </body>
 </html>
